--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola buenas a todos. Feliz dia</h1>
+    <h1>Hola buenas a todos. Feliz </h1>
 </body>
 </html>
