--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p1>Algunos cambios </p1>
 
     <h1>Hola buenas a todos. Feliz </h1>
-  <p1>Algunos cambios </p1>
+  <p1>Algunos mejores cambios </p1>
  master
 </body>
 </html>
